# copyrite

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  README.md  release-plz.toml
.github/workflows/: debian.yml  docker.yml  release-bins.yml  release-crate.yml  release-plz.yml  tests.yaml
.kiro/specs/sftp-support/: .config.kiro  design.md  requirements.md
benches/: generate.rs
checksum-cloud/: Cargo.toml
checksum-cloud/src/: lib.rs  main.rs
cloud-checksum/: Cargo.toml
cloud-checksum/benches/: generate.rs  reader.rs  readers.rs
cloud-checksum/src/: checksum.rs  cli.rs  error.rs  lib.rs  main.rs  stats.rs
cloud-checksum/src/checksum/: aws_etag.rs  file.rs  mod.rs  standard.rs
cloud-checksum/src/cloud/: aws.rs  file.rs  mod.rs
cloud-checksum/src/io/: aws.rs  file.rs  mod.rs
cloud-checksum/src/io/copy/: aws.rs  file.rs  mod.rs
cloud-checksum/src/io/reader/: aws.rs  channel.rs  file.rs  mod.rs
cloud-checksum/src/io/sums/: aws.rs  file.rs  mod.rs
cloud-checksum/src/io/writer/: aws.rs  file.rs  mod.rs
cloud-checksum/src/reader/: aws.rs  channel.rs  file.rs  mod.rs
cloud-checksum/src/task/: check.rs  copy.rs  generate.rs  mod.rs
cloud-checksum/src/test/: error.rs  mod.rs  test.rs
cloud-checksum/tests/: copy.rs
copyrite/: CHANGELOG.md  Cargo.toml
copyrite/benches/: generate.rs
copyrite/src/: cli.rs  main.rs  stats.rs
copyrite/src/checksum/: aws_etag.rs  file.rs  mod.rs  standard.rs
copyrite/src/io/: mod.rs
copyrite/src/io/copy/: aws.rs  file.rs  mod.rs
copyrite/src/io/sums/: aws.rs  channel.rs  file.rs  mod.rs
copyrite/src/task/: check.rs  copy.rs  generate.rs  mod.rs
copyrite/src/test/: mod.rs
copyrite/tests/: copy.rs
debian/: control  rules
docs/: ARCHITECTURE.md  README.md
pkg/: cliff-debian.toml  cliff-rpm.toml
pkg/debian/: changelog  control  copyright
pkg/docker/: Dockerfile
pkg/rpm/: copyrite.spec
src/io/sums/: aws.rs  channel.rs
src/test/: mod.rs
tests/: copy.rs
xtask/: Cargo.toml
xtask/src/: main.rs
