[package]
name = "cloud-checksum"
description = "A tool to calculate multiple checksums concurrently locally and in the cloud."
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"
rand = "0.8"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "test-util", "io-util", "io-std", "fs"] }
futures-util = "0.3"
async-stream = "0.3"
trait-variant = "0.1"

# Checksums
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1"

# Value parsing
humantime = "2"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
anyhow = "1"

[[bench]]
name = "generate"
harness = false
